--- a/composer.json
+++ b/composer.json
@@ -6,34 +6,19 @@
     "authors": [
         {
             "name": "polopolaw",
-            "email": "your-email@example.com"
+            "email": "polopolaw@gmail.com"
         }
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4",
-        "guzzlehttp/guzzle": "^7.0"
+        "php": ">=7.4"
     },
     "autoload": {
         "psr-4": {
             "Polopolaw\\ProxyManager\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Polopolaw\\ProxyManager\\Tests\\": "tests/"
-        }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.0"
-    },
     "config": {
         "sort-packages": true
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/your-username/proxy-manager-client.git"
-        }
-    ]
+    }
 }
